Group17RobotReal/Group17Robot.cydsn/BUILD.log
--------------- Build Started: 10/09/2019 09:07:49 Project: Group17Robot, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\jerry\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\jerry\OneDrive\Documents\Folder in which all goes\ECE3091\LatestGitTrackedRobot\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\Group17Robot.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\jerry\OneDrive\Documents\Folder in which all goes\ECE3091\LatestGitTrackedRobot\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0029: information: Voltage Reference Information: Vref '1.024V' is connected to terminal 'vminus' of '\ADC:DSM\' but no direct hardware connection exists.
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.2\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_DelSig_v3_30\PSoC5\ADC_DelSig_v3_30.cysch (Instance:DSM)
 * C:\Users\jerry\OneDrive\Documents\Folder in which all goes\ECE3091\LatestGitTrackedRobot\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\TopDesign\TopDesign.cysch (Instance:vRef_2)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 59% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 88% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Info: apr.M0060: Comparator 'Comparator[2]@[FFB(Comparator,2)]' is powered up by analog subsystem to support an auto-enabled vref. (App=cydsfit)
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from main.c:23:0:
ultrasonic.h:18:0: warning: "BLOCK_WEST_EDGE" redefined
 #define BLOCK_WEST_EDGE 0
 ^
In file included from main.c:21:0:
main.h:53:0: note: this is the location of the previous definition
 #define BLOCK_WEST_EDGE (ARENA_WIDTH - BLOCK_LENGTH) / 2
 ^
In file included from main.c:23:0:
ultrasonic.h:19:0: warning: "BLOCK_EAST_EDGE" redefined
 #define BLOCK_EAST_EDGE 1
 ^
In file included from main.c:21:0:
main.h:54:0: note: this is the location of the previous definition
 #define BLOCK_EAST_EDGE (BLOCK_WEST_EDGE + BLOCK_LENGTH)
 ^
In file included from main.c:23:0:
ultrasonic.h:20:0: warning: "BLOCK_NORTH_EDGE" redefined
 #define BLOCK_NORTH_EDGE 2
 ^
In file included from main.c:21:0:
main.h:55:0: note: this is the location of the previous definition
 #define BLOCK_NORTH_EDGE (BLOCK_SOUTH_EDGE + BLOCK_LENGTH)
 ^
In file included from main.c:23:0:
ultrasonic.h:21:0: warning: "BLOCK_SOUTH_EDGE" redefined
 #define BLOCK_SOUTH_EDGE 3
 ^
In file included from main.c:21:0:
main.h:56:0: note: this is the location of the previous definition
 #define BLOCK_SOUTH_EDGE (ARENA_LENGTH - BLOCK_LENGTH) / 2
 ^
main.c: In function 'main':
main.c:179:9: warning: unused variable 'tmp' [-Wunused-variable]
     int tmp = 0;
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/colour.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c colour.c -o .\CortexM3\ARM_GCC_541\Debug\colour.o
colour.c: In function 'ColourSensingCalibrationRGB2':
colour.c:616:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:614:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:602:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:600:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:588:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:586:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:575:23: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
             stored[i] = ADC_Read32();
                       ^
colour.c:573:9: note: containing loop
         for(int i = 0; i < 10; i++)
         ^
colour.c: In function 'ColourSensingCalibrationRGB1':
colour.c:534:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:532:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:520:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:518:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:506:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:504:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:493:23: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
             stored[i] = ADC_Read32();
                       ^
colour.c:491:9: note: containing loop
         for(int i = 0; i < 10; i++)
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/ultrasonic.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c ultrasonic.c -o .\CortexM3\ARM_GCC_541\Debug\ultrasonic.o
In file included from ultrasonic.c:15:0:
ultrasonic.h:18:0: warning: "BLOCK_WEST_EDGE" redefined
 #define BLOCK_WEST_EDGE 0
 ^
In file included from ultrasonic.c:14:0:
main.h:53:0: note: this is the location of the previous definition
 #define BLOCK_WEST_EDGE (ARENA_WIDTH - BLOCK_LENGTH) / 2
 ^
In file included from ultrasonic.c:15:0:
ultrasonic.h:19:0: warning: "BLOCK_EAST_EDGE" redefined
 #define BLOCK_EAST_EDGE 1
 ^
In file included from ultrasonic.c:14:0:
main.h:54:0: note: this is the location of the previous definition
 #define BLOCK_EAST_EDGE (BLOCK_WEST_EDGE + BLOCK_LENGTH)
 ^
In file included from ultrasonic.c:15:0:
ultrasonic.h:20:0: warning: "BLOCK_NORTH_EDGE" redefined
 #define BLOCK_NORTH_EDGE 2
 ^
In file included from ultrasonic.c:14:0:
main.h:55:0: note: this is the location of the previous definition
 #define BLOCK_NORTH_EDGE (BLOCK_SOUTH_EDGE + BLOCK_LENGTH)
 ^
In file included from ultrasonic.c:15:0:
ultrasonic.h:21:0: warning: "BLOCK_SOUTH_EDGE" redefined
 #define BLOCK_SOUTH_EDGE 3
 ^
In file included from ultrasonic.c:14:0:
main.h:56:0: note: this is the location of the previous definition
 #define BLOCK_SOUTH_EDGE (ARENA_LENGTH - BLOCK_LENGTH) / 2
 ^
ultrasonic.c: In function 'ultrasonicInterruptHandler':
ultrasonic.c:91:27: error: '_' undeclared (first use in this function)
        puckPileLocation = _
                           ^
ultrasonic.c:91:27: note: each undeclared identifier is reported only once for each function it appears in
ultrasonic.c:92:10: error: expected ';' before '}' token
          }   
          ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 10/09/2019 09:08:18 ---------------
